--- a/rapport_intermediaire.tex
+++ b/rapport_intermediaire.tex
@@ -38,9 +38,6 @@
 \chapter{Gestion de l'association}
   En ce début de cette année scolaire 2018/2019, Augustin Bielefeld et moi même avons établis différents sujets de réflexions afin d'améliorer le fonctionnement de l'association.
 
-  \section{Recrutement}
-
-
   \section{Outils de gestion}
     L'ARTS utilisait auparavant deux clouds, un pour les programmes des projets de l'association et l'autre pour tout ce qui concernait l'administration.
     Le seul outils de communication entre les membres de l'association était les mails.
@@ -73,10 +70,37 @@
         J'ai choisi d'utiliser Trello
 
     \subsection{GitHub}
+      \subsubsection{Qu'est ce que GitHub}
+      \subsubsection{Pourquoi l'utiliser}
+      \subsubsection{Mise en place}
 
   \section{Déroulement d'un Conseil d'Administration}
+    \subsection{Avant le CA}
+    \subsection{Pendant le CA}
+    \subsection{Après le CA}
+
+  \section{Mon poste de responsable coupe}
+    Voici ce que j'ai fait en tant que responsable coupe depuis le début de l'année.
+    \subsection{Coupe de France de robotique}
+      Comme chaque année l'ARTS participe à la coupe de France de robotique
+      \subsubsection{Inscription sur Poolzor}
+        changement d'adresse mail
+        et remplissage des différentes information
+      \subsubsection{Paiement}
+        envoie du chèque et surveiller que l'étape du paiement soit validé.
+    \subsection{Coupe de Belgique}
+      \subsubsection{Mise en attente}
+      \subsubsection{Acceptation}
+      \subsubsection{Estimation des coûts}
+        Trajet location voiture, carburant, péage et hébergement
+      \subsubsection{Constitution de l'équipe}
+      \subsubsection{Paiement}
+    \subsection{Suvi de l'avancement des projets}
 
   \section{Transmission des connaissance}
+    \subsection{Création de processus sur le Trello}
+    \subsection{Faire un carnet de passation}
+    \subsection{Tirer parti de l'engagement étudiant}
 
 \chapter*{Conclusion}
 
