--- a/rapport_intermediaire.tex
+++ b/rapport_intermediaire.tex
@@ -29,7 +29,8 @@
 
 
   \section{Base roulante}
-    Une base roulante est ce qui permet au robot de se déplacer. Le but de ce projet de fournir une méthode pour en concevoir et programmer une. Ma partie sur ce projet est la programmation.
+    \subsection{Pourquoi}
+      Une base roulante est ce qui permet au robot de se déplacer. Le but de ce projet de fournir une méthode pour en concevoir et programmer une. Ma partie sur ce projet est la programmation.
 
     \subsection{Recherches}
       N'ayant aucune connaissance au préalable, j'ai effectuer des recherche sur tout d'abord sur comment asservir un moteur à courant continu car c'est autour de ceci que l'on peut construire un code de déplacement. Ensuite, j'ai chercher des projets similaire au mien.
@@ -47,13 +48,32 @@
         Pour récuper la position d'un codeur à quadrature de phase j'utilise la bibliothèque de Encoder de Paul Stoffregen qui utilise les interruptions pour calculer la position d'un codeur. Cette bibliothèque peut utiliser 0, 1 ou 2 interruptions pour un codeur. 2 interruption utilise une interruption pour chaque signal, c'est la solution la plus fiable. 1 interruption n'en utilise qu'une pour un seul signal ce qui est moins fiable mais c'est négligeable dans notre cas car l'arduino est assez rapide. 0 interruption est une solution à éviter dans la mesure du possible.
 
         Pour ce projet, j'ai choisi d'utiliser la solution avec une interruption par codeur à cause d'une contrainte technique : l'arduino n'a que deux interruptions externes.
-      \subsubsection{Génération des consignes de vitesse}
-        avec profil de vitesse (rampe)
-      \subsubsection{Odométrie}
 
+        Pour l'asservissement, j'ai utilisé en premier la bibliothèque PID de Brett Beauregard. Mais j'ai ensuite implémenter un PID.
+      \subsubsection{Génération des consignes de vitesse}
+        J'utilise un asservissement en position au dessus de l'asservissement en vitesse. Un problème est apparu quand j'ai implémenter cette solution car le robot dérape à cause d'une accélération trop forte. Ainsi j'ai implémenter un profil trapésoïdal de vitesse.
+        Pour l'asservissement en position il faut aussi connaître la position actuelle du robot. C'est pourquoi j'ai implémenter une odométrie
       \subsubsection{Génération de trajectoire}
 
+  \section{Interface Arduino / PC}
+    \subsection{Pourquoi}
+      Pouvoir interragir avec l'arduino à partir d'un ordinateur, et ainsi pouvoir contr\^oler l'arduino, obtenir des données et déboguer.
+
+    \subsection{}
+
   \section{Utilitaire de réglage de PID}
+    \subsection{Pourquoi}
+      L'utilitaire de réglage de PID à pour but de d'obtenir facilement les coefficients du PID pour un moteur à courant continu.
+
+    \subsection{Principe}
+      Tout d'abord, je crée un modèle du moteur de la forme \(\frac{K\tau}{(s+\tau)}\). Je néglige la constante de temps électrique du système qui est négligeable devant la constante de temps mécanique.
+
+      Pour obtenir la constante de temps mécanique \(\tau \) et le gain du système \(K\), je mesure la réponse indiciel du moteur plusieurs fois pour faire une moyenne. À partir de cette réponse indiciel moyenne, je fais une régression. J'obtiens ainsi \(K\) et \(\tau \).
+
+      Une fois ces constantes obtenus, j'utilise l'outil \texttt{pidTuner}, et obtient ainsi les coefficients du PID en fonction du temps de réponse et l'amortissement.
+
+    \subsection{Futures améliorations}
+
   \section{Site Internet}
     \subsection{Choix de technologie}
     \subsection{Formation}
@@ -106,28 +126,28 @@
     \subsection{Pendant le CA}
     \subsection{Après le CA}
 
-  \section{Mon poste de responsable coupe}
-    Voici ce que j'ai fait en tant que responsable coupe depuis le début de l'année.
-    \subsection{Coupe de France de robotique}
-      Comme chaque année l'ARTS participe à la coupe de France de robotique
-      \subsubsection{Inscription sur Poolzor}
-        changement d'adresse mail
-        et remplissage des différentes information
-      \subsubsection{Paiement}
-        envoie du chèque et surveiller que l'étape du paiement soit validé.
-    \subsection{Coupe de Belgique}
-      \subsubsection{Mise en attente}
-      \subsubsection{Acceptation}
-      \subsubsection{Estimation des coûts}
-        Trajet location voiture, carburant, péage et hébergement
-      \subsubsection{Constitution de l'équipe}
-      \subsubsection{Paiement}
-    \subsection{Suvi de l'avancement des projets}
-
-  \section{Transmission des connaissance}
-    \subsection{Création de processus sur le Trello}
-    \subsection{Faire un carnet de passation}
-    \subsection{Tirer parti de l'engagement étudiant}
+  % \section{Mon poste de responsable coupe}
+  %   Voici ce que j'ai fait en tant que responsable coupe depuis le début de l'année.
+  %   \subsection{Coupe de France de robotique}
+  %     Comme chaque année l'ARTS participe à la coupe de France de robotique
+  %     \subsubsection{Inscription sur Poolzor}
+  %       changement d'adresse mail
+  %       et remplissage des différentes information
+  %     \subsubsection{Paiement}
+  %       envoie du chèque et surveiller que l'étape du paiement soit validé.
+  %   \subsection{Coupe de Belgique}
+  %     \subsubsection{Mise en attente}
+  %     \subsubsection{Acceptation}
+  %     \subsubsection{Estimation des coûts}
+  %       Trajet location voiture, carburant, péage et hébergement
+  %     \subsubsection{Constitution de l'équipe}
+  %     \subsubsection{Paiement}
+  %   \subsection{Suvi de l'avancement des projets}
+  %
+  % \section{Transmission des connaissance}
+  %   \subsection{Création de processus sur le Trello}
+  %   \subsection{Faire un carnet de passation}
+  %   \subsection{Tirer parti de l'engagement étudiant}
 
 \chapter*{Conclusion}
 
